# graphdb

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
analytics_service/: Cargo.toml
caching/: Cargo.toml
caching/src/: caching.rs  lib.rs  mod.rs
caching_service/: Cargo.toml  distributed.rs
compliance_service/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: lib.rs
daemon/src/daemonize/: daemonize.rs  daemonize.rs.backup
daemon_api/: Cargo.toml  daemon_config.yaml
daemon_api/src/: cli_schema.rs  daemon_registry.rs  help_generator.rs  lib.rs  mod.rs
enterprise/: Cargo.toml
indexing_service/: Cargo.toml
indexing_service/src/: adapters.rs  index.rs  lib.rs
lib/: Cargo.toml
lib/src/: commands.rs  daemon_config.rs  daemon_registry.rs  daemon_utils.rs  database.rs  errors.rs  lib.rs  orchestrator.rs  util.rs
lib/src/config/: config.rs  config_constants.rs  config_defaults.rs  config_helpers.rs  config_impl_cli.rs  config_impl_storage.rs  config_serializers.rs  config_structs.rs  config_traits.rs  mod.rs
lib/src/daemon/: cli_schema.rs  daemon.rs  daemon_api.rs  daemon_management.rs  daemon_registry.rs  daemon_registry_lazy.rs  daemon_utils.rs  db_daemon_registry.rs  mod.rs  storage_client.rs  storage_daemon_server.rs
lib/src/daemon/daemonize/: daemonize.rs  mod.rs
lib/src/durability/: mod.rs  recovery.rs  snapshot.rs
lib/src/engine/: .vertex.rs.swo  edge.rs  graph.rs  medical.rs  mod.rs  pattern_match.rs  properties.rs  traversal.rs  vertex.rs
lib/src/graph_engine/: medical.rs  traversal.rs
lib/src/graph_engine/graph_engine/: adapters.rs
lib/src/graph_evolution/: graph_evolution.rs
lib/src/indexing/: backend.rs  service.rs  tantivy_engine.rs
lib/src/indexing_caching/: indexing_caching.rs  mod.rs
lib/src/memory/: datastore.rs  datastore_old.rs  mod.rs
lib/src/models/: bulk_insert.rs  mod.rs  properties.rs  queries.rs  to_vertex.rs  vertices.rs
lib/src/models/medical/: address.rs  billing_address.rs  claim.rs  clinical_note.rs  department.rs  diagnosis.rs  disposition.rs  doctor.rs  dosage.rs  ed_event.rs  ed_procedure.rs  encounter.rs  event.rs  facility_unit.rs  fhir_message.rs  hl7_message.rs  hospital.rs  immunization.rs  insurance.rs  login.rs  master_patient_index.rs  medical_code.rs  medical_interaction.rs  medical_interaction_primary.rs  medical_interaction_secondary.rs  medical_record.rs  medication.rs  mod.rs  nurse.rs  observation.rs  partner.rs  patient.rs  patient_journey.rs  pharmacy.rs  pharmacy_integration.rs  prescription.rs  refill.rs  registration.rs  role.rs  side_effect.rs  (+7 more)
lib/src/plugin_system/: plugin_system.rs
lib/src/query_exec_engine/: mod.rs  query_exec_engine.rs
lib/src/query_parser/: :: lib:src:query_parser:config.rs  config.rs  cypher_parser.rs  graphql_parser.rs  mod.rs  query_parser.rs  sql_parser.rs
lib/src/rdb/: datastore.rs  managers.rs
lib/src/sled/: managers.rs
lib/src/storage_engine/: .config_structs.rs.swp  config.rs  config_structs.rs  edge.rs  errors.rs  hybrid_storage.rs  initialize_cluster_core.rs  inmemory_storage.rs  load_balancer.rs  mod.rs  mysql_storage.rs  node.rs  postgres_storage.rs  prompt.txt  queries_examples.txt  raft_storage.rs  redis_storage.rs  rocksdb_client.rs  rocksdb_raft_storage.rs  rocksdb_storage.rs  rocksdb_storage.rs.backup  rocksdb_storage_daemon_pool.rs  rocksdb_wal_manager.rs  sled_client.rs  sled_storage.rs  sled_storage.rs.backup  sled_storage_daemon_pool.rs  sled_storage_daemon_pool.rs.backup  sled_wal_manager.rs  storage_engine.rs  storage_engine.rs.backup  storage_engine.rs.refactored  storage_utils.rs  tikv_storage.rs  types.rs  user_storage.rs  zmq_client.rs
lib/src/tests/: edge.rs
lib/src/transact_indexing/: transact_indexing.rs
logging_service/: Cargo.toml
logging_service/src/: lib.rs  log.rs
models/: Cargo.toml  util.rs
models/src/: bulk_insert.rs  edges.rs  errors.rs  identifiers.rs  lib.rs  mod.rs  properties.rs  queries.rs  util.rs  vertices.rs
notifications_service/: Cargo.toml
notifications_service/src/: notifications.rs
observability_service/: Cargo.toml
plugins/first_plugin/: plugin.toml
plugins/host/: Cargo.toml
plugins/src/: lib.rs
proto/: Cargo.toml  build.rs
rest_api/: Cargo.toml  rest_api_config.yaml
rest_api/src/: config.rs  lib.rs  main.rs
security/: Cargo.toml  roles_permissions.yaml
security/src/: lib.rs  middleware.rs  roles.rs
server/: Cargo.toml  handlers.rs
server/src/: main.rs
server/src/cli/: .handlers_storage.rs.swp  cli.1.rs  cli.rs  cli.rs.backup  cli_from_repo.rs  commands.rs  config.rs  config.rs.backup  config.toml  config.wait.rs  config_constants.rs  config_defaults.rs  config_from_repo.rs  config_helpers.rs  config_impl_cli.rs  config_impl_storage.rs  config_structs.rs  daemon_management.1.rs  daemon_management.rs  daemon_management.rs.stop_working  daemon_registry.rs  handlers.rs  handlers.rs.1  handlers.rs.backed_up  handlers.rs.backup  handlers.rs.latest  handlers.rs.wait  handlers.rs.waiting  handlers_all.rs  handlers_index.rs  handlers_main.rs  handlers_previous.rs  handlers_queries.rs  handlers_queries.rs.last  handlers_rest.rs  handlers_storage.rs  handlers_storage.rs.backup  handlers_storage_from_repo.rs  handlers_truncated.rs  handlers_utils.rs  (+8 more)
server/src/cli/resume_regular/: Dmitry_Resume 4.docx  Dmitry_Resume.docx  Dmitry_Resume.epub  Dmitry_Resume.pages  cover_letter.docx  cover_letter.epub  cover_letter.pages  selo-2023-05-28 11.46.18.pages
src/: lib.rs  main.rs
src/cli_engine/: cli_engine.rs  cli_engine.rs.backup  mod.rs
storage_caching/: Cargo.toml
storage_daemon_server/: .storage_config.yaml.swp  Cargo.toml  storage_config.yaml  storage_config.yaml.backup  storage_config_mysql.yaml  storage_config_postgres.yaml  storage_config_redis.yaml  storage_config_rocksdb.yaml  storage_config_sled.yaml  storage_config_tikv.yaml
storage_daemon_server/data/db/: db
storage_daemon_server/src/: lib.rs  storage_client.rs
storage_daemon_server/storage_daemon_server/: storage_config.yaml
validation_service/: Cargo.toml
(+76 files in other folders)
