[package]
name = "graph_database"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.7"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.20"
tracing-subscriber = "0.3.2"
env_logger = "0.10"
serde_json = "1.0"
tonic = "0.12.3"
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
sled = "0.34.7"
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] } 
hashbrown = "0.15.2"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
async-graphql = "7.0.15"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.95"
crossterm = "0.28.1"
tokio-stream = "0.1.17"
petgraph = "0.7.1"
rocksdb = "0.23.0"
tokio-test = "0.4.4"
mockall = "0.13.1"

[[bin]]
name = "graphdb-cli"
path = "src/main.rs"
