[workspace]
resolver = "2"

members = [
    "caching",
    "lib",
    "proto",
    "security",
    "server",
    "client", 
    "rest_api", 
    "daemon", 
    "daemon_api", "security", "caching", "models", "storage_daemon_server", "storage_caching", "analytics_service", "cache_service", "notifications_service", "validation_service", "observability_service", "compliance_service", "logging_service", 
]
