[workspace]
resolver = "2"

members = [
    "lib",
    "proto",
    "security",
    "server",
    "caching",
    "client", 
    "rest_api", 
    "daemon", 
    "daemon_api", "security", "models", "storage_daemon_server", "storage_caching", "analytics_service", "caching_service", "notifications_service", "validation_service", "observability_service", "compliance_service", "logging_service", 
]
