[package]
name = "caching_service"
version = "0.1.0"
edition = "2024"
description = "Async background service for distributed caching in GraphDB"
license = "MIT"
authors = ["Your Team"]

[dependencies]
lib = { path = "../lib" }
caching = { path = "../caching" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rdkafka = { version = "0.38.0", features = ["tokio"] }
prometheus = { version = "0.13", optional = true }
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.86"

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0.140"

[features]
default = []
enterprise = ["prometheus"]
