[package]
name = "graphdb-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.8"
daemonize = "0.5.0"
serde_json = "^1.0.57"
uuid = "^1.2.2"
prost = "0.13.4"
prost-derive = "0.13.4"
prost-types = "0.13.4"
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net"], optional = true }
libloading = { version = "0.8.6", optional = true }
glob = { version = "0.3.2", optional = true }
sysinfo = { version = "0.31.4", features = ["default", "serde"] }
nix = { version = "0.29.0", features = ["process", "fs", "signal", "user"] } 
libc = "0.2.169"
prctl = "1.0.0"
proctitle = "0.1.1"
users = "0.11.0"
bytemuck = "1.21.0"

[lib]
name = "graphdb_daemon"
path = "src/lib.rs"

[dependencies.graphdb-lib]
path = "../lib"
version = "0.1.0"
