[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.8"
daemonize = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" # Aligned with models and lib
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Aligned with models and security
prost = "0.13.0" # Latest stable based on crates.io search on 2025-07-01
prost-derive = "0.13.0" # Latest stable
prost-types = "0.13.0" # Latest stable
tonic = "0.12.0" # Latest stable
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync"] } # Updated to latest stable
tokio-stream = { version = "0.1.17", features = ["net"], optional = true } # Consistent, no features dependent on it
libloading = { version = "0.8.6", optional = true } # Consistent, no features dependent on it
glob = { version = "0.3.2", optional = true } # Consistent, no features dependent on it
sysinfo = { version = "0.31.4", features = ["default", "serde"] } # Consistent
nix = { version = "0.29.0", features = ["process", "fs", "signal", "user"] }
libc = "0.2.169"
prctl = "1.0.0"
proctitle = "0.1.1"
users = "0.11.0"
bytemuck = "1.21.0"
thiserror = "2.0.12" # Consistent
lazy_static = "1.5.0"
regex = "1.11.1"

[lib]
name = "daemon"
path = "src/lib.rs"

[dependencies.lib]
path = "../lib"
version = "0.1.0"
