# daemon_api/Cargo.toml
[package]
name = "daemon_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
regex = "1.11.1" # Consistent
nix = "0.29.0" # Consistent
daemonize = "0.5.0" # Consistent
daemon = { path = "../daemon" }
config = "0.15.8" # Consistent
lazy_static = "1.5.0" # Aligned with lib
tokio = { version = "1.44.2", features = ["net", "time"] } # Updated to latest stable, retaining specific features
