# daemon_api/Cargo.toml
[package]
name = "daemon_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
regex = "1.11.1" # Consistent
nix = "0.29.0" # Consistent
daemonize = "0.5.0" # Consistent
daemon = { path = "../daemon" }
config = "0.15.8" # Consistent
lazy_static = "1.5.0" # Aligned with lib
clap = { version = "4.5.29", features = ["derive"] } # Added clap
anyhow = "1.0.98" # Added anyhow for FromStr error type
reqwest = { version = "0.12.22", features = ["json"] } # Added with json feature
thiserror = "2.0.12" # Consistent
bincode = "2.0.1"
tokio = { version = "1.44.2", features = ["net", "time"] } # Updated to latest stable, retaining specific features
lib = { path = "../lib" }
log = "0.4.27"

