# daemon_api/Cargo.toml
[package]
name = "daemon_api"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4.3"
glob = "0.3.2"
libc = "0.2" 
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
regex = "1.11.1" # Consistent
nix =  { version = "0.29.0", features = ["resource"] } 
daemonize = "0.5.0" # Consistent
daemon = { path = "../daemon" }
config = "0.15.8" # Consistent
lazy_static = "1.5.0" # Aligned with lib
clap = { version = "4.5.29", features = ["derive"] } # Added clap
sysinfo = { version = "0.36.1", features = ["default", "serde"] }
anyhow = "1.0.98" # Added anyhow for FromStr error type
reqwest = { version = "0.12.22", features = ["json"] } # Added with json feature
thiserror = "2.0.12" # Consistent
bincode = "2.0.1"
tokio = { version = "1.44.2", features = ["net", "time"] } # Updated to latest stable, retaining specific features
lib = { path = "../lib" }
storage_daemon_server = { path = "../storage_daemon_server" }
log = "0.4.27"
chrono = { version = "0.4.39", features = ["serde"] }
serde_with = "3.14.0"
nom = "8.0.0"
futures = "0.3.31"
sled = "0.34.7"
dirs= "6.0.0"
dotenvy = "0.15.7"
serde_json = "1.0.140"
base64 = "0.22.1"
toml = "0.8.23"
# YAML-rust2 dependencies (replacing serde_yaml)
yaml-rust2 = "0.10.3"
serde_yaml2= "0.1.3"
simplelog = "0.12.2"
