# lib/Cargo.toml
# Updated: 2025-06-30 - Ensuring sled is enabled by default for sled_storage.rs,
# and correcting password-hash features. Also enabling "v1" and "rng" for uuid.
# Making `rand` a direct dependency to resolve `thread_rng` issue in util.rs.

[package]
name = "graphdb-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies from your original Cargo.toml
ordered-float = "5.0.0"
rand = "0.8.5" # <-- CRUCIAL: Make rand a direct, non-optional dependency for util.rs
actix-web = "4.0"
actix-rt = "2.7"
dotenv = "0.15"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.20"
tracing-subscriber = "0.3.2"
env_logger = "0.10"
serde_json = "1.0"
tonic = "0.12.3"
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
sled = { version= "0.34.7" , optional = true} # Original: optional
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
hashbrown = "0.15.2"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
async-graphql = "7.0.15"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.95"
crossterm = "0.28.1"
tokio-stream = "0.1.17"
petgraph = "0.7.1"
tokio-test = "0.4.4"
mockall = "0.13.1"
graphql-parser = "0.4.1"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "^1.3.3", optional = true }
rocksdb = { version = "0.23.0", features = ["snappy", "lz4", "zstd", "zlib", "bzip2"], optional = true }
uuid = { version = "1.13.1", features = ["v1", "v4", "rng"] } # <-- CRUCIAL: Added "v1" and "rng" features for uuid v1 generation
rmp-serde = "1.3.0"
once_cell = "1.20.3"
internment = "0.8.6"
tempfile = "3.16.0"
byteorder = "1.5.0"
toml = "0.8.20"
postgres = "0.19.10"
redis = "0.28.2"

# NEW/UPDATED: For password hashing/verification in user_storage.rs
password-hash = { version = "0.5", features = ["rand_core"] }

[features]
default = ["with_sled"]
rocksdb-datastore = ["rocksdb", "bincode"]
test-suite = []
bench-suite = [] # No need to list "rand" here anymore if it's a direct dep
with_rocksdb = ["rocksdb"]
with_sled = ["sled"]

# Specify both lib and bin
[lib]
name = "graphdb_lib"
path = "src/lib.rs"

[[bin]]
name = "graphdb-lib"
path = "src/main.rs"
