# lib/Cargo.toml
# Updated: 2025-07-01 - Corrected bincode and bcrypt dependency declarations.
# Harmonized versions across workspace.

[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "5.0.0" # Consistent
rand = "0.8.5" # Consistent
actix-web = "4.11.0" # Crucial: Updated to match security crate's version
actix-rt = "2.10.0" # Updated to match server crate's version
dotenv = "0.15.0" # Aligned with server
dashmap = { version = "6.1.0", optional = true}  # Concurrent hash map for Raft state
rdkafka = "0.38.0"  # Redpanda for event-driven updates
raft = { version = "0.7.0" }  # Raft consensus, updated to latest stable
openraft = { version = "0.9.21", features = ["serde"] }
ring = "0.17.8"  # Encryption for HIPAA compliance, updated
tokio = { version = "1.44.2", features = ["full"] } # Updated to latest stable
tracing = "0.1.37" # Updated to latest stable
tracing-subscriber = "0.3.18" # Updated to latest stable
env_logger = "0.11.8" # Aligned with storage_daemon_server
serde_json = "1.0.140" # Aligned with models and rest_api
tonic = "0.12.0" # Latest stable
async-std = "1.13.0" # Consistent
chrono = { version = "0.4.39", features = ["serde"] } # Consistent
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and rest_api
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"], optional = true }  # Optional Postgres for relational data
dotenvy = "0.15.7" # Consistent
diesel_json = "0.2.1" # Consistent
open-cypher = "0.1.1" # Consistent
nom = "8.0.0" # Consistent
sled = { version= "0.34.7", optional = true } # Consistent, no longer optional
bytes = "1.10.0" # Consistent
clap = { version = "4.5.29", features = ["derive"] } # Consistent
hashbrown = "0.15.2" # Consistent
pest = "2.7.15" # Consistent
petgraph = "0.8.2" # Graph algorithms
lalrpop = "0.22.1" # Consistent
sqlparser = "0.54.0" # Consistent
async-trait = "0.1.86" # Consistent with server
bbolt-rs = "1.3.10" # Consistent
rayon = "1.10.0" # Consistent
tantivy = "0.22.0" # Consistent
async-graphql = "7.0.15" # Consistent
libloading = "0.8.6" # Consistent
r2d2 = "0.8.10" # Consistent
anyhow = "1.0.98" # Aligned with server, rest_api, storage_daemon_server
crossterm = "0.28.1" # Consistent
tokio-stream = "0.1.17" # Consistent
tokio-test = "0.4.4" # Consistent
mockall = "0.13.1" # Consistent
graphql-parser = "0.4.1" # Consistent
argon2 = "0.5.3" # Aligned with rest_api
base64 = "0.22.1" # Consistent
bincode = { version = "2.0.1", features = ["serde"] } # Consistent, no longer optional
rocksdb = { version = "0.23.0", features = ["snappy", "lz4", "zstd", "zlib", "bzip2"], optional = true } # Consistent and remains optional
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Consistent
rmp-serde = "1.3.0" # Consistent
once_cell = "1.20.3" # Consistent
internment = "0.8.6" # Consistent
tempfile = "3.16.0" # Consistent
byteorder = "1.5.0" # Consistent
toml = "0.8.20" # Consistent
postgres = "0.19.10" # Consistent
redis = { version = "0.32.4", optional = true} # Consistent
log = "0.4.27" # Consistent
password-hash = { version = "0.5", features = ["rand_core"] } # Consistent
moka = { version = "0.12.10", features = ["sync", "future"] } # Consistent
thiserror = "2.0.12" # Consistent
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] } # Consistent, features enabled
caching = { path = "../caching" }  # In-memory caching
bcrypt = "0.15.1" # Aligned with models (highest version)
regex = "1.11.1" # Consistent
mysql = "26.0.1"

[dev-dependencies]
tempfile = "3.20.0"  # Temporary storage for tests
serde_json = "1.0.140"  # Test data
tokio-test = "0.4.4"  # Async testing
mockall = "0.13.1"  # Mocking

[features]
default = []
sled-datastore = ["sled"] # No longer needs to list "sled" as sled is always active
rocksdb-datastore = ["rocksdb"] # Still needs to list rocksdb if it's optional
redis-datastore = ["redis"]
postgres-datastore = ["sqlx"]
in-memory-datastore = ["dashmap"]
test-suite = []
bench-suite = []
with-rocksdb = ["rocksdb"] # This feature enables the optional rocksdb crate
with-sled = [] # No longer needs to list "sled" as sled is always active
