# lib/Cargo.toml
# Updated: 2025-07-01 - Corrected bincode and bcrypt dependency declarations.
# Harmonized versions across workspace.

[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.175"
fs2 = "0.4.3"
surrealdb = { version = "2.3.7", features = ["kv-mem", "kv-rocksdb", "kv-tikv"] } 
keyv = { version = "0.2.1", optional = true}
tikv-client = "0.3.0"
futures = "0.3.31"
ordered-float = "5.0.0"
rand = "0.8.5"
actix-web = "4.11.0"
actix-rt = "2.10.0"
dotenv = "0.15.0"
dashmap = { version = "6.1.0", optional = true}
rdkafka = "0.38.0"
raft = { version = "0.7.0" }
openraft = { version = "0.9.21", features = ["serde"] }
ring = "0.17.8"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
env_logger = "0.11.8"
serde_json = "1.0.140"
tonic = "0.12.0"
async-std = "1.13.0"
sysinfo = { version = "0.36.1", features = ["default", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"], optional = true }
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
sled = { version= "0.34.7", optional = true}
typed-sled = { version = "0.2.3" }
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
hashbrown = "0.15.2"
pest = "2.7.15"
petgraph = "0.8.2"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
async-graphql = "7.0.15"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.98"
crossterm = "0.28.1"
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
mockall = "0.13.1"
graphql-parser = "0.4.1"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
rocksdb = { version = "0.23.0", features = ["snappy", "lz4", "zstd", "zlib", "bzip2"], optional = true } # ADDED `optional = true`
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
rmp-serde = "1.3.0"
once_cell = "1.20.3"
internment = "0.8.6"
tempfile = "3.16.0"
byteorder = "1.5.0"
toml = "0.8.20"
postgres = "0.19.10"
redis = { version = "0.32.4", features = ["aio", "tokio-comp"], optional = true}
log = "0.4.27"
password-hash = { version = "0.5", features = ["rand_core"] }
moka = { version = "0.12.10", features = ["sync", "future"] }
thiserror = "2.0.12"
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] }
caching = { path = "../caching" }
bcrypt = "0.15.1"
regex = "1.11.1"
mysql = { version="26.0.1", optional = true}
serde_yaml2 = "0.1.3"
tokio-postgres = "0.7.13"
mysql_async = "0.36.1"
nix = { version = "0.29.0", features = ["process"]}
dirs= "6.0.0"

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0.140"
tokio-test = "0.4.4"
mockall = "0.13.1"

[features]
default = ["with-rocksdb", "with-sled", "with-tikv"] # Reset to an empty default to avoid the previous error.
sled-datastore = ["sled"]
tikv-datasource = ["keyv"]
rocksdb-datastore = ["rocksdb"] # This feature now correctly enables the optional rocksdb dependency.
redis-datastore = ["redis"]
postgres-datastore = ["sqlx"]
mysql-datastore = ["mysql"]
in-memory-datastore = ["dashmap"]
test-suite = []
bench-suite = []
with-rocksdb = ["rocksdb"]
with-tikv = ["surrealdb/kv-tikv", "keyv"]
with-sled = ["sled"]
