[package]
name = "notifications_service"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib", version = "0.1.0", features = ["sled-datastore"] }
caching = { path = "../caching" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }  # Structured logging
slog-async = "2.8.0"  # Async logging
log = "0.4.27"         # Logging facade
log4rs = "1.3.0"       # Log rotation
rdkafka = "0.38.0"     # Redpanda notifications
tantivy = "0.24.2"     # Full-text search (enterprise)
ring = "0.17.14"       # Encryption for HIPAA compliance
chrono = { version = "0.4.39", features = ["serde"] }    # Timestamps
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.86"
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Consistent
models = { path = "../models", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0.140"
