[package]
name = "graphdb-proto"
version = "0.1.0"
authors = ["Dmitry Roitman <dmitryro@gmail.com>"]
description = "Protobuf/gRPC interfaces for IndraDB"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
build = "build.rs"
edition = "2021"
readme = "../README.md"

[lib]
name = "graphdb_proto"
path = "src/lib.rs"

[features]
default = ["client"]
server = ["tokio", "tokio-stream", "libloading", "graphdb-plugin-host", "glob"]
client = ["tokio", "tokio-stream"]
test-suite = ["graphdb-lib/test-suite", "client", "server"]

[dependencies]
serde_json = "^1.0.57"
uuid = "^1.2.2"
prost = "0.13.4"
prost-derive = "0.13.4"
prost-types = "0.13.4"
tonic = "0.12.3"
tokio = { version = "^1.24.2", features = ["rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1.17", features = ["net"], optional = true }
libloading = { version = "0.8.6", optional = true }
glob = { version = "0.3.2", optional = true }

[build-dependencies]
tonic-build = "0.12.3"

[dependencies.graphdb-lib]
path = "../lib"
version = "0.1.0"

[dependencies.graphdb-plugin-host]
path = "../plugins/host"
version = "0.1.0"
optional = true
