# rest_api/Cargo.toml
[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"], optional = true } # Updated to latest stable. 'optional = true' is correct with 'server' feature.
sled = "0.34.7" # Consistent
hyper = { version = "0.14.28", features = ["full"] } # Aligned with server
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
chrono = { version = "0.4.39", features = ["serde"] } # Aligned with other crates
async-trait = "0.1.86" # Aligned with server
serde_json = "1.0.140" # Aligned with models and lib
lazy_static = "1.5.0" # Aligned with lib
regex = "1.11.1" # Consistent
daemon = { path = "../daemon" }
daemon_api = { path = "../daemon_api" }

# Crucial direct dependencies for `rest_api/src/lib.rs`
jsonwebtoken = "9.3.0" # Crucial: Aligned with the highest version found (security was 8)
argon2 = "0.5.3" # Aligned with lib
password-hash = "0.5" # Consistent
anyhow = "1.0.98" # Aligned with server and storage_daemon_server
tracing = "0.1.37" # Updated to latest stable
tracing-subscriber = "0.3.18" # Updated to latest stable
dotenv = "0.15.0" # Aligned with server
env_logger = "0.11.8" # Aligned with storage_daemon_server

# Workspace dependencies (correctly referencing your crate names)
lib = { path = "../lib" }
security = { path = "../security" }
storage_daemon_server = { path = "../storage_daemon_server" }
models = { path = "../models" }

[lib]
name = "rest_api"
path = "src/lib.rs"

[features]
default = []
server = ["tokio"] # Enables tokio when this feature is active
client = ["tokio"] # Enables tokio when this feature is active
test-suite = []

[dependencies.plugin-host]
path = "../plugins/host"
version = "0.1.0"
optional = true
