[package]
name = "security"
version = "0.1.0"
edition = "2024"
authors = ["Dmitry R <you@example.com>"]
description = "RBAC Security module for GraphDB with JWT support"
license = "MIT"

[dependencies]
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9" # For YAML config
anyhow = "1.0.95"
actix-web = { version = "4", optional = true }
oauth2 = { version = "4", optional = true }
chrono = { version = "0.4.39", features = ["serde"] }
# Add your web/server framework as needed

[features]
default = []
actix = ["dep:actix-web"]
oauth2 = ["dep:oauth2"]
