# security/Cargo.toml
[package]
name = "security"
version = "0.1.0"
edition = "2024"
authors = ["Dmitry R <you@example.com>"]
description = "RBAC Security module for GraphDB with JWT support"
license = "MIT"

[dependencies]
jsonwebtoken = "9.3.0" # Crucial: Aligned with rest_api (highest version)
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
serde_json = "1.0.140" # Aligned with models and lib
serde_yaml = "0.9.34" # Aligned with storage_daemon_server
anyhow = "1.0.98" # Aligned with rest_api and storage_daemon_server
oauth2 = { version = "4", optional = true }
chrono = { version = "0.4.39", features = ["serde"] } # Consistent
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Consistent
storage_daemon_server = { path = "../storage_daemon_server" }
models = { path = "../models", version = "0.1.0" }
lib = { path = "../lib" }
actix-web = "4.11.0" # Retaining highest version, will make server and lib align to this
futures = "0.3.31"
sled = "0.34.7" # Consistent
argon2 = "0.5.3" # Aligned with lib and rest_api
rand_core = { version = "0.6", features = ["std"] } # Consistent
lazy_static = "1.5.0" # Aligned with lib
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time", "rt"] } # Updated to latest stable
