[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Roitman <dmitryro@gmail.com>"]
keywords = ["graph", "database", "graph-database"]
categories = ["database", "database-implementations"]

[dependencies]
actix-web = "4.0"
actix-rt = "2.7"
dotenv = "0.15"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
serde_json = "1.0"
tonic = "0.12.3"
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
sled = "0.34.7"
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
hashbrown = "0.15.2"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.95"
crossterm = "0.28.1"


[dev-dependencies]
serde_json = "1.0.135"

[dependencies.graphdb-lib]
path = "../lib"
version = "0.1.0"

[dependencies.graphdb-proto]
path = "../proto"
version = "0.1.0"
features = ["server"]

[dependencies.graphdb-rest_api]
path = "../rest_api"
version = "0.1.0"
features = ["server"]

[[bin]]
name = "graphdb-server"
path = "src/main.rs"

# Specify both lib and bin
[lib]
name = "graphdb_server"
path = "src/lib.rs"

