# server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Roitman <dmitryro@gmail.com>"]
keywords = ["graph", "database", "graph-database"]
categories = ["database", "database-implementations"]

[dependencies]
actix-web = "4.10.0" # Updated
actix-rt = "2.10.0" # Updated
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] } # Updated
env_logger = "0.11.3" # Updated
serde_json = "1.0.120" # Updated
tonic = "0.12.3"
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] } # Updated
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
sled = "0.34.7"
regex = "1.11.1"
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
hashbrown = "0.15.2"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.95"
crossterm = "0.28.1"
config = "0.15.8"
daemonize = "0.5.0"
proctitle = "0.1.1"
memmap2 = "0.9.5"
shared_memory = "0.12.4"
sysinfo = { version = "0.31.4", features = ["default", "serde"] }
nix = "0.29.0"
libc = "0.2.169"
prctl = "1.0.0"
shm = "0.1.0"
once_cell = "1.20.3"
lazy_static = "1.5.0"
hyper = { version = "0.14.28", features = ["server", "http1"] } # Updated

# NEW: Required for Basic Authentication encoding
base64 = "0.22.1" # Updated

# Conditional dependency for the REST API client in cli.rs
[target.'cfg(feature = "rest_api_client")'.dependencies]
reqwest = { version = "0.12.5", features = ["json"], optional = true } # Updated

[dev-dependencies]
serde_json = "1.0.120" # Updated

# Path dependencies (assuming these are sibling crates in a workspace)
[dependencies.graphdb-lib]
path = "../lib"
version = "0.1.0"
features = ["rocksdb-datastore"]

[dependencies.graphdb-proto]
path = "../proto"
version = "0.1.0"
features = ["server"]

[dependencies.graphdb-daemon]
path = "../daemon"
version = "0.1.0"

[dependencies.daemon_api]
path = "../daemon_api"

# NEW: Dependency on the rest_api crate for the CLI to start it
[dependencies.graphdb-rest_api]
path = "../rest_api"
version = "0.1.0"
features = ["server"]

[[bin]]
name = "graphdb-cli"
path = "src/main.rs"

[lib]
name = "graphdb_server"
path = "src/lib.rs"

[features]
default = []
rest_api_client = ["reqwest"]
