# server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Roitman <dmitryro@gmail.com>"]
keywords = ["graph", "database", "graph-database"]
categories = ["database", "database-implementations"]

[dependencies]
actix-web = "4.11.0" # Aligned with security crate's latest
actix-rt = "2.10.0"  # Consistent with server's previous, compatible with actix-web 4.x
dotenv = "0.15.0"
daemonize = "0.5.0"
tokio = { version = "1.45.1", features = ["full"] } # Updated to latest stable, preserving "full"
env_logger = "0.11.8" # Aligned with storage_daemon_server's latest
serde_json = "1.0.140" # Aligned with models and lib
tonic = "0.12.0" # Latest stable based on crates.io search on 2025-07-01
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["serde"] } # Consistent
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
serde_yaml = "0.9.34" # Retained as the highest version
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
futures = "0.3.31"
sled = "0.34.7" # Consistent
ctrlc = "3.4.7"
regex = "1.11.1" # Consistent
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] } # Consistent
hashbrown = "0.15.2"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86" # Retaining server's version, higher than rest_api's 0.1
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.98" # Aligned with rest_api and storage_daemon_server
crossterm = "0.28.1"
config = "0.15.8"
proctitle = "0.1.1"
memmap2 = "0.9.5"
shared_memory = "0.12.4"
log = "0.4.27"
sysinfo = { version = "0.31.4", features = ["default", "serde"] }
nix = "0.29.0"
libc = "0.2.169"
prctl = "1.0.0"
shm = "0.1.0"
once_cell = "1.20.3"
lazy_static = "1.5.0" # Aligned with lib
hyper = { version = "0.14.28", features = ["server", "http1"] } # Consistent
base64 = "0.22.1"
toml = "0.8.23"
# Consolidated path dependencies with their features and versions
storage_daemon_server = { path = "../storage_daemon_server", version = "0.1.0" }
lib = { path = "../lib", version = "0.1.0", features = ["sled-datastore"] }
rest_api = { path = "../rest_api", version = "0.1.0", features = ["server"] } # Feature enabling tokio in rest_api
daemon = { path = "../daemon", version = "0.1.0" }
daemon_api = { path = "../daemon_api", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0", features = ["server"] }
models = { path = "../models", version = "0.1.0" }

# Conditional dependency for the REST API client in cli.rs
reqwest = { version = "0.12.5", optional = true }

[dev-dependencies]
serde_json = "1.0.140" # Aligned with main dependencies

[[bin]]
name = "graphdb-cli"
path = "src/main.rs"

[lib]
name = "graphdb_server"
path = "src/lib.rs"

[features]
default = []
rest_api_client = ["reqwest", "reqwest/json"] # Enables reqwest and its "json" feature when "rest_api_client" is active
