# storage_daemon_server/Cargo.toml
[package]
name = "storage_daemon_server"
version = "0.1.0"
edition = "2024" # Retained as 2024

[dependencies]
lib = { path = "../lib", version = "0.1.0", features = ["sled-datastore"] }
models = { path = "../models" }
tokio = { version = "1.44.2", features = ["full"] } # Updated to latest stable
anyhow = "1.0.98" # Aligned with rest_api and server
log = "0.4.27" # Consistent
env_logger = "0.11.8" # Retained as the highest version
chrono = { version = "0.4.39", features = ["serde"] } # Consistent
dashmap = { version = "6.1.0", optional = true}  # Concurrent hash map for Raft state
sled = { version = "0.34.7", optional = true }  # Consistent
serde = { version = "1.0.219", features = ["derive"] } # Aligned with models and lib
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf", "snappy", "lz4", "zstd", "zlib", "bzip2"], optional = true } # Consistent and remains optional
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Consistent
serde_yaml2= "0.1.3"
clap = { version = "4.5.29", features = ["derive"], optional = true } # Consistent and optional
bincode = { version = "2.0.1", features = ["serde"] } # Consistent
serde_json = "1.0.140" # Aligned with models and lib
openraft = { version = "0.9.21", features = ["serde"] } # Raft replication
async-trait = "0.1.86" # Consistent with server
simplelog = "0.12.2"
# Remove the [[bin]] section entirely (as per your original prompt's implicit request)

[features]
with-rocksdb = ["rocksdb"]
with-sled = ["sled"] # No longer needs to list "sled" as sled is always active
