[package]
name = "plugin-host"
version = "0.1.0"
build = "build.rs"
authors = ["Dmitry R <dmitry@example.com>"]
description = "A graph database library"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.57"
threadpool = "1.8.1"
uuid = "^1.2.2"

[build-dependencies]
rustc_version = "0.4.1"

[dependencies.lib]
path = "../../lib"
version = "0.1.0"
